# vessel-track

./: .gitignore  README.md
app/: .env.example  .gitignore  package-lock.json  package.json
app/app/: page.tsx
app/components/: Map.tsx
app/data/: mockVessels.ts
app/lib/: api-client.ts  websocket.ts
service/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
service/alembic/: env.py
service/scripts/: seed_terminals.py  test_ai_prediction.py  test_phase3_structure.py  test_phase4_learning.py  test_phase4_structure.py  test_phase5_api.py  test_prediction.py
service/src/: config.py  main.py
service/src/api/routers/: admin.py  predictions.py  terminals.py  vessels.py  websocket.py
service/src/database/: connection.py  models.py
service/src/schemas/: prediction.py  terminal.py  vessel.py
service/src/services/: ai_service.py  background_tasks.py  embedding_service.py  learning_service.py  outcome_detector.py  prediction_engine.py  rag_service.py  slack_service.py  websocket_manager.py
service/src/utils/: constants.py  geo.py  logger.py
service/tests/test_utils/: test_geo.py
specs/: architecture.md  features.md  index.md  kafka-architecture.md  setup.md  tech-stack.md
specs/tasks/: README.md  phase1-foundation-database.md  phase2-core-services.md  phase3-ai-integration.md  phase4-learning-system.md  phase5-api-websocket.md  phase6-frontend-integration.md  phase7-kafka-integration.md
